# astrobase

./: .coveragerc  .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  main.py  mkdocs.yaml  mypy.ini  pyproject.toml
.github/: code_of_conduct.md  dependabot.yaml  funding.yaml  pull_request_template.md  security.md
.github/ISSUE_TEMPLATE/: bug.md  bug_report.md  doc.md  feature.md  feature_request.md  question.md
.github/workflows/: publish.yaml  test.yaml
astrobase/: __init__.py  main.py
astrobase/apis/: aks.py  auth.py  cluster.py  eks.py  gke.py  kubernetes.py  service.py
astrobase/cli/: aks.py  client.py  cluster.py  config.py  eks.py  gke.py  iam.py  main.py  profile.py  provider.py  setup.py
astrobase/config/: logger.py
astrobase/exc/: main.py
astrobase/helpers/: name.py
astrobase/providers/: aks.py  amazon.py  aws.py  azure.py  eks.py  gcp.py  gke.py  google.py  main.py
astrobase/routers/: aks.py  auth.py  cluster.py  eks.py  gke.py  health.py  infra.py  resource.py  service.py  workflow.py
astrobase/schemas/: aks.py  auth.py  cluster.py  eks.py  gke.py  resource.py  service.py  test.py
astrobase/server/: config.py  gunicorn_config.py  main.py
astrobase/server/routers/: aks.py  aws.py  azure.py  eks.py  gcp.py  gke.py  health.py
astrobase/types/: aws.py  azure.py  gcp.py  health.py  providers.py
astrobase/utils/: http.py  name.py  str_to_dict.py
astrobase_cli/: .gitignore  LICENSE  README.md  main.py  pyproject.toml
astrobase_cli/astrobase_cli/: apply.py  destroy.py  kubernetes.py  profile.py  resource.py
astrobase_cli/astrobase_cli/clients/: eks.py  gke.py
astrobase_cli/schemas/: cluster.py  resource.py  workflow.py
astrobase_cli/tests/: test_astrobase_cli.py
astrobase_cli/utils/: config.py  formatter.py  http.py  params.py
astrobasecloud/: __init__.py
astrobasecloud/cli/: aks.py  cluster.py  config.py  eks.py  gke.py  main.py  profile.py  provider.py  setup.py
astrobasecloud/providers/: _provider.py  aws.py  azure.py  gcp.py  main.py
astrobasecloud/server/: main.py
astrobasecloud/server/routers/: aws.py  azure.py  gcp.py  health.py
astrobasecloud/types/: aws.py  azure.py  gcp.py  provider.py
astrobasecloud/utils/: name.py  str_to_dict.py
config/: gunicorn.py  logger.py
docs/: README.md  ROADMAP.md  alternatives.md  compare.md  contributing.md  help.md  index.md  release-notes.md  roadmap.md  who-uses-astrobase.md
docs/tutorial/: intro.md  quickstart.md
docs/tutorial/aws/: eks.md  intro.md
docs/tutorial/azure/: aks.md  intro.md
docs/tutorial/gcp/: gke.md  intro.md
examples/: clusters.yaml  gke.yaml  resources.yaml  simple-aks.yaml  simple-eks.yaml  simple-gke.yaml
examples/clusters/: eks.yaml  gke.yaml
examples/kubernetes/: nginx-deployment.yaml
scripts/: bump-version.sh  clean.sh  docker-build.sh  docker-push.sh  docker-run.sh  docs-build.sh  format-imports.sh  format.sh  gunicorn-run.sh  install.sh  lint.sh  publish.sh  test-cov-html.sh  test.sh  uvicorn-run.sh
tests/: conftest.py  factories.py  mocks.py  test_aks.py  test_astrobase.py  test_aws.py  test_azure.py  test_cli_aks.py  test_cli_eks.py  test_cli_gke.py  test_cli_profile.py  test_cli_provider.py  test_cli_server.py  test_cli_version.py  test_config_defaults.py  test_eks.py  test_gcp.py  test_gke.py  test_health.py  test_profile.py  test_version.py
tests/assets/: test-aks-cluster.yaml  test-eks-cluster.yaml  test-gke-cluster.yaml
